--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,11 +39,13 @@
               <% end %>
             </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Eventos", my_events_path, class: "dropdown-item" %>
               <%= link_to "Pedidos", orders_path, class: "dropdown-item" %>
-              <%= link_to "Perfil", user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Tickets", tickets_path, class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
+              <% if current_user.company? %>
+                <%= link_to "Meus Eventos", my_events_path, class: "dropdown-item" %>
+              <% end %>
+              <%= link_to "Perfil", user_path(current_user), class: "dropdown-item" %>
+              <%= link_to "Sair", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
             </div>
           </li>
         <% else %>
